# auto_motive

./: .gitignore  README.md  pyproject.toml
auto_motive/: hooks.py  modules.txt
auto_motive/auto_motive/doctype/auto_job_card/: auto_job_card.js  auto_job_card.json  auto_job_card.py  test_auto_job_card.py
auto_motive/auto_motive/doctype/auto_job_card_item/: auto_job_card_item.json  auto_job_card_item.py
auto_motive/auto_motive/print_format/auto_jc/: auto_jc.json
auto_motive/public/js/: quotation.js
